--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,9 @@
 </head>
 
 <body>
-    <header>
 
+	<header>
+        <!-- top navbar -->
 		<nav class="nav-extended text-shadow light-blue darken-1">
 			<div class="nav-wrapper">
 				<a href="{{ url_for('get_tasks') }}" class="brand-logo">Task Manager</a>
@@ -29,12 +30,13 @@
 					<li><a href="#">New Task</a></li>
 					<li><a href="#">Manage Categories</a></li>
 					<li><a href="#">Log Out</a></li>
-					<li><a href="#">Log In</a></li>
+					<li><a href="{{ url_for('login') }}">Log In</a></li>
 					<li><a href="{{ url_for('register') }}">Register</a></li>
 				</ul>
 			</div>
 		</nav>
 
+        <!-- mobile sidenav -->
 		<ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue-text text-darken 4">Task Manager</h4></li>
             <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
@@ -42,10 +44,10 @@
             <li><a href="#">New Task</a></li>
             <li><a href="#">Manage Categories</a></li>
             <li><a href="#">Log Out</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
-        </ul>
-    </header>
+		</ul>
+	</header>
 
     <section>
         <!-- flash messages -->
@@ -64,9 +66,6 @@
         {% block content %}
         {% endblock %}
     </main>
-
-    {% block content %}
-    {% endblock %}
 
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
